# tmai

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.ja.md  README.md  SECURITY.en.md  SECURITY.ja.md  SECURITY.md  install.sh  versions.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
api-spec/: .gitignore  corevents.schema.json  mcp-tools.json  openapi.json  package-lock.json  package.json  redocly.yaml
assets/: s6-conversation-panel-mock.html  ui-sample.html
crates/tmai-app/: Cargo.toml  tauri.conf.json
crates/tmai-app/capabilities/: default.json
crates/tmai-app/src/: events.rs  hooks_server.rs  main.rs  state.rs  ws_server.rs
crates/tmai-app/src/commands/: agent_actions.rs  agents.rs  mod.rs  terminal.rs
crates/tmai-app/web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/tmai-app/web/src/: App.tsx  main.tsx
crates/tmai-app/web/src/components/agent/: AgentActions.tsx  AgentCard.tsx  AgentList.tsx  PreviewPanel.tsx  TranscriptView.tsx  preview-content.ts
crates/tmai-app/web/src/components/agent/__tests__/: preview-content.test.ts  transcript-view.test.ts
crates/tmai-app/web/src/components/flow/: EdgeConfigPanel.tsx  FlowEditor.tsx  FlowNode.tsx  NodeConfigPanel.tsx
crates/tmai-app/web/src/components/layout/: ConfirmDialog.tsx  HelpOverlay.tsx  SpawnBar.tsx  SplitPaneLayout.tsx  StatusBar.tsx  ToastContainer.tsx
crates/tmai-app/web/src/components/layout/__tests__/: orchestrator-button.test.ts
crates/tmai-app/web/src/components/markdown/: MarkdownPanel.tsx
crates/tmai-app/web/src/components/project/: DirBrowser.tsx  ProjectGroup.tsx  ProjectSidebar.tsx
crates/tmai-app/web/src/components/settings/: SecurityPanel.tsx  SettingsPanel.tsx
crates/tmai-app/web/src/components/teams/: TeamsPanel.tsx
crates/tmai-app/web/src/components/terminal/: ImeOverlay.tsx  TerminalList.tsx  TerminalPanel.tsx
crates/tmai-app/web/src/components/usage/: UsagePanel.tsx
crates/tmai-app/web/src/components/worktree/: ActionPanel.tsx  BranchGraph.tsx  CommitLog.tsx  CreateWorktreeForm.tsx  DetailPanel.tsx  DiffViewer.tsx  IssuesPanel.tsx  PrCard.tsx  WorktreeCard.tsx  WorktreePanel.tsx
crates/tmai-app/web/src/components/worktree/__tests__/: branch-state.test.ts  cross-navigation.test.ts
crates/tmai-app/web/src/components/worktree/graph/: LaneGraph.tsx  colors.ts  layout.ts  types.ts
crates/tmai-app/web/src/hooks/: useAgents.ts  useAppEvents.ts  useIdleNotification.test.ts  useIdleNotification.ts  useKeyboardShortcuts.ts  useTauriEvents.ts  useTerminal.ts  useWorktrees.ts
crates/tmai-app/web/src/lib/: api-http.ts  api-tauri.ts  api.ts  index.ts  issue-utils.ts  sse-provider.tsx  tauri.ts  teams.ts
crates/tmai-app/web/src/styles/: globals.css
crates/tmai-core/: Cargo.toml
crates/tmai-core/src/: command_sender.rs  lib.rs  pty_inject.rs
crates/tmai-core/src/agents/: mod.rs  types.rs
crates/tmai-core/src/api/: actions.rs  auto_approve.rs  builder.rs  core.rs  events.rs  mod.rs  openapi.rs  queries.rs  state_snapshot.rs  types.rs  worktree_guard.rs
crates/tmai-core/src/audit/: analyze.rs  events.rs  helper.rs  logger.rs  mod.rs  reader.rs
crates/tmai-core/src/auto_action/: mod.rs  resolver.rs  service.rs  templates.rs  tracker.rs
crates/tmai-core/src/auto_approve/: defer.rs  judge.rs  mod.rs  rules.rs  service.rs  types.rs
crates/tmai-core/src/auto_cleanup/: mod.rs  service.rs
crates/tmai-core/src/codex_ws/: client.rs  mod.rs  sender.rs  service.rs  translator.rs  types.rs
crates/tmai-core/src/config/: claude_settings.rs  mod.rs  settings.rs
crates/tmai-core/src/detectors/: claude_code.rs  codex.rs  common.rs  default.rs  gemini.rs  mod.rs
crates/tmai-core/src/detectors/claude_code/: approval.rs  constants.rs  mod.rs  spinner.rs  tests.rs
crates/tmai-core/src/error/: from_api_error.rs  mod.rs  tests.rs
crates/tmai-core/src/flow/: action.rs  condition.rs  engine.rs  executor.rs  mod.rs  prompt.rs  real_executor.rs  registry.rs  resolver.rs  template.rs  types.rs
crates/tmai-core/src/git/: mod.rs  monitor.rs
crates/tmai-core/src/github/: client.rs  error.rs  mod.rs  pr_monitor.rs
crates/tmai-core/src/hooks/: handler.rs  mod.rs  registry.rs  types.rs
crates/tmai-core/src/ipc/: client.rs  protocol.rs
crates/tmai-core/src/monitor/: mod.rs  poller.rs
crates/tmai-core/src/orchestrator_notify/: buffer.rs  mod.rs  service.rs
crates/tmai-core/src/orchestrator_state/: mod.rs  persist.rs  restore.rs
crates/tmai-core/src/pty/: holder.rs  mod.rs  persistence.rs  registry.rs  session.rs
crates/tmai-core/src/review/: mod.rs  service.rs  types.rs
crates/tmai-core/src/runtime/: mod.rs  standalone.rs  tmux_adapter.rs
crates/tmai-core/src/security/: mod.rs  rules.rs  scanner.rs  types.rs
crates/tmai-core/src/session_discovery/: mod.rs  scanner.rs  types.rs
crates/tmai-core/src/session_lookup/: lookup.rs  mod.rs  phrase.rs
crates/tmai-core/src/state/: mod.rs  store.rs
crates/tmai-core/src/task_meta/: mod.rs  service.rs  store.rs
crates/tmai-core/src/teams/: agents_scanner.rs  config.rs  mod.rs  task.rs
crates/tmai-core/src/tmux/: client.rs  mod.rs  pane.rs  pipe_log.rs
crates/tmai-core/src/transcript/: ansi_renderer.rs  mod.rs  parser.rs  renderer.rs  types.rs  watcher.rs
crates/tmai-core/src/usage/: fetcher.rs  mod.rs  parser.rs  service.rs  types.rs
crates/tmai-core/src/utils/: keys.rs  mod.rs  namegen.rs
crates/tmai-core/src/worktree/: mod.rs  ops.rs  types.rs
crates/tmai-core/src/wrap/: analyzer.rs  runner.rs
crates/tmai-core/tests/: gh_client_auto_action.rs
doc/: README.md  getting-started.md
docs/: aim.en.md  aim.ja.md  aim.md  charter.en.md  charter.ja.md  charter.md
scripts/: build-web-dev.sh  build-web.sh  generate-types.sh  setup-wsl-portforward.ps1
src/: audit.rs  codex_hook.rs  command_sender.rs  init.rs  lib.rs  main.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+2508 files in other folders)
