[package]
name = "tmai"
version = "2.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["TrustDelta"]
description = "Tactful Multi Agent Interface — binary bundle installer (use `cargo binstall tmai`)"
repository = "https://github.com/trust-delta/tmai"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/trust-delta/tmai"
keywords = ["tmux", "ai", "claude", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

# Ship only the crates.io stub + binstall metadata + READMEs.
# Hub-side assets (clients/, api-spec/, install.sh, node_modules, …) are
# excluded so the crate stays a pure distribution marker.
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "tmai"
path = "src/bin/tmai.rs"

[[bin]]
name = "tmai-ratatui"
path = "src/bin/tmai-ratatui.rs"

# cargo-binstall contract: downloads the bundled tarball from the matching
# GitHub Release and extracts bin/tmai + bin/tmai-ratatui directly.
# See https://github.com/cargo-bins/cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }/bin/{ bin }"
