[package]
name = "tmai-app"
version = "0.20.0"
edition = "2021"
rust-version = "1.91"
authors = ["TrustDelta"]
description = "tmai desktop app — Tauri v2 standalone AI agent manager"

[dependencies]
tmai-core = { version = "0.20.0", path = "../tmai-core" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "tmai-app"
path = "src/main.rs"
