[package]
name = "tmai-app"
version = "0.20.0"
edition = "2021"
rust-version = "1.91"
authors = ["TrustDelta"]
description = "tmai standalone Tauri v2 application"
build = "build.rs"

[dependencies]
tmai-core = { version = "0.20.0", path = "../tmai-core" }
tauri = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
parking_lot = "0.12"
portable-pty = "0.9"

[build-dependencies]
tauri-build = "2"

[dev-dependencies]

[[bin]]
name = "tmai-app"
path = "src/main.rs"
