[package]
name = "tmai-core"
version = "0.5.0"
edition = "2021"
rust-version = "1.91"
authors = ["TrustDelta"]
description = "Core library for tmai - agent detection, state management, and monitoring"
repository = "https://github.com/trust-delta/tmai"
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
regex = "1"
rand = "0.10"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
nix = { version = "0.31", features = ["signal", "process", "term"] }
libc = "0.2"
local-ip-address = "0.6"

[dev-dependencies]
pretty_assertions = "1"
temp-env = "0.3"
tempfile = "3.25.0"
